Pullup rev 1.480 (requested by kirill@lava.net and ok'd by erh for ticket #1148)  Adjust the check for what segments should go on the low priority  free list.  If a segment starts exactly at 16M don't try to split  it because that causes the code to try to call uvm_page_physload  with a zero length segment. PR#17199